# pco

./: README.md
exercises/: .gitignore  README.md
exercises/ex11p2/: pcobarrier.h
exercises/ex11p3/: main.cpp  pcobarrier.h
exercises/ex13p1/: bridgemanagerfloat.h
exercises/ex13p2/: bridgemanagerfloat.h
exercises/ex13p3/: bridgemanagerfloat.h  bridgemanagerfloat_fifo.h
exercises/ex15p1/: buffer2conso.h  prodcons1.cpp
exercises/ex16p1/: buffer2conso.h
exercises/ex16p2/: buffer2conso.h  prodcons1.cpp
exercises/ex16p3/: buffer2conso.h  prodcons1.cpp
exercises/ex20p1/: readerwriterpriowritergeneral.h
exercises/ex20p2/: readerwriter.cpp  readerwriterpriowritergeneral.h
exercises/ex20p3/: readerwriterpriowritergeneral.h
exercises/ex21p1/: readerwriterclassab.h
exercises/ex21p2/: readerwriterclassab.h
exercises/ex21p3/: readerwriterclassab.h
exercises/ex6p1/: main.cpp
exercises/ex6p2/: main.cpp
pcosynchro/: PKGBUILD  pcosynchro-git-r37.3cc9592-1-x86_64.pkg.tar.zst
pw02/: CMakeLists.txt  PCO_Labo_2.pro
pw02/src/: mainwindow.cpp  mainwindow.h  mythread.cpp  mythread.h  threadmanager.cpp  threadmanager.h
pw02/ui/: mainwindow.ui
pw03/: .gitignore  CMakeLists.txt  extractor.cpp  factory.cpp  images.qrc  seller.h  utils.cpp  wholesale.cpp
pw04/: CMakeLists.txt  QtrainSimStudent.pro
pw04/QtrainSim/: .gitignore  Doxyfile  QtrainSim.pri  qtrainsim.qrc
pw04/QtrainSim/src/: commandetrain.cpp  commandetrain.h  connect.h  contact.cpp  contact.h  ctrain_handler.cpp  ctrain_handler.h  general.h  loco.cpp  loco.h  main.cpp  mainwindow.cpp  mainwindow.h  maquettemanager.cpp  maquettemanager.h  segment.cpp  segment.h  simview.cpp  simview.h  trainsimsettings.cpp  trainsimsettings.h  voie.cpp  voie.h  voieaiguillage.cpp  voieaiguillage.h  voieaiguillageenroule.cpp  voieaiguillageenroule.h  voieaiguillagetriple.cpp  voieaiguillagetriple.h  voiebuttoir.cpp  voiebuttoir.h  voiecourbe.cpp  voiecourbe.h  voiecroisement.cpp  voiecroisement.h  voiedroite.cpp  voiedroite.h  voietraverseejonction.cpp  voietraverseejonction.h  voievariable.cpp  (+1 more)
pw04/data/: infosVoies.txt
pw04/data/Maquettes/: MAQUET_A.TXT  MAQUET_B.TXT  Maquet_A0.txt  Maquet_A1.txt  Maquet_A1_hepia.txt  Maquet_A2.txt  Maquet_B0.txt  Maquet_B1.txt  Maquet_B2.txt  Maquet_C0.txt  Maquet_D0.txt  Maquet_b_OLD.txt  Maquet_c.txt
pw04/src/: cppmain.cpp  launchable.h  locomotive.cpp  locomotive.h  locomotivebehavior.cpp  locomotivebehavior.h  route.cpp  route.h  synchro.h  synchrointerface.h
pw05/: CMakeLists.txt  thread-sequence.mmd
pw05/src/: application.cpp  application.h  barber.cpp  barber.h  client.cpp  client.h  main.cpp  pcosalon.cpp  pcosalon.h  salon.h  salonbarberinterface.h  salonclientinterface.h
pw05/src/utils/: display.cpp  display.h  graphicsaloninterface.cpp  graphicsaloninterface.h  launchable.h  mainwindow.cpp  mainwindow.h
pw06/: CMakeLists.txt
pw06/labo6_gui/: CMakeLists.txt
pw06/labo6_gui/gui/: Doxyfile
pw06/labo6_gui/gui/src/: arrowitem.cpp  arrowitem.h  computeenginegui.cpp  computeenginegui.h  computeenvironmentgui.h  connect.h  guiinterface.cpp  guiinterface.h  main.cpp  mainwindow.cpp  mainwindow.h  messages.h  simview.cpp  simview.h
pw06/labo6_tests/: CMakeLists.txt
pw06/labo6_tests/src/: main.cpp  pcotest.h  testcomputengine.h
pw06/src/: CMakeLists.txt  computationmanager.cpp  computationmanager.h  computeengine.cpp  computeengine.h  computeenvironment.h  launchable.h
